--- a/beer-spa-hash/package.json
+++ b/beer-spa-hash/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "film-spa",
+    "name": "beer-spa",
     "version": "1.0.0",
     "description": "Small SPA app using MVC pattern and history API",
     "main": "index.js",
